fixed some alignment issues on larger screens.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
     height: 100%;
     margin: auto;
     padding: 0px;
-    text-align: center;
     overflow: scroll;
     justify-content: center;
     display: inline-block;
@@ -38,14 +37,14 @@ body {
     animation: glow 1.5s ease-in-out infinite alternate;
   }
   
-  @keyframes glow {
+  /* @keyframes glow {
     from {
       text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #00b8e6, 0 0 40px #00b8e6, 0 0 50px #00b8e6, 0 0 60px #00b8e6, 0 0 70px #00b8e6;
     }
     to {
       text-shadow: 0 0 20px #fff, 0 0 30px #a1fc8b, 0 0 40px #a1fc8b, 0 0 50px #a1fc8b, 0 0 60px #a1fc8b, 0 0 70px #a1fc8b, 0 0 80px #a1fc8b;
     }
-  }
+  } */
 
 #navIconHeight {
     margin-top: 2%;
@@ -191,21 +190,30 @@ body {
 }
 
 #projHead {
+    text-align: center;
     background-color: rgba(255, 127, 80, 0.897);
     border: 2px solid white;
     border-radius: 5px;
     margin-top: 5%;
     margin-right: auto;
     margin-left: auto;
-    padding-top: 1.2%;
+    padding-top: 1.6%;
     height: 15vh;
     width: 30vw;
     font-family: 'Roboto Slab', serif;
 }
 
+#projName2 {
+    text-align: center;
+}
+
 #projDis {
     font-family: 'Roboto Slab', serif;
     margin: 3%;
+}
+
+#buttonRow {
+    justify-content: center;
 }
 
 #projBut {
@@ -253,6 +261,12 @@ body {
     display: inline-block;
     margin-top: 5%;
     background-image: url("./assets/images/aboutMeJumbo.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#aboutMeRow {
+    justify-content: center;
 }
 
 #aboutMe2Pic {
@@ -270,6 +284,7 @@ body {
     font-family: 'Merriweather', serif;
     margin-top: 3%;
     margin-left: 3%;
+    text-align: center;
 }
       
 #aboutMeDetails:hover {
@@ -285,11 +300,12 @@ body {
 #skills {
     margin-left: 40%;
     color: rgb(194, 193, 193);
+    text-align: center;
 }
 
 #paper {
         width: 60vw;
-        height: 90vh;
+        height: 70vh;
         position: relative;
         margin: 20px auto;
         padding-top: 40px;
@@ -335,6 +351,7 @@ body {
     height: 7vh; 
     margin-top: 6%;
     padding-top: 1%;
+    text-align: center;
 }
 
 #footerId2 {
@@ -543,6 +560,9 @@ body {
         height: 15vh;
         width: 35vw;
         margin-bottom: 8%;
+        margin-left: auto;
+        margin-right: auto;
+        display: inherit;
         float: none;
         color: white;
         box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.616);
@@ -656,6 +676,9 @@ body {
         height: 15vh;
         width: 35vw;
         margin-bottom: 8%;
+        margin-left: auto;
+        margin-right: auto;
+        display: inherit;
         float: none;
         color: white;
         box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.616);
